<resources>
    <string name="app_name">Kollin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">finish</string>
    <string name="on_boarding">ON BOARDING</string>
    <string name="go_to_details">Go to details</string>
    <string name="you_are_in_fragment_details">YOU ARE IN FRAGMENT DETAILS</string>
    <string name="apple">apple</string>
    <string name="image_view_clicked">ImageView clicked</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="some_text">Some text</string>
    <string name="go_to_onboarding">Go to OnBoarding</string>
    <string name="logout">LogOut</string>
    <string name="welcome">Welcome</string>

</resources>